# fastapi-events-app

./: .gitignore  README.md  mypy.ini  pyproject.toml  requirements-all.txt  requirements-test.txt  run_now.sh  setup.cfg
.github/workflows/: pytest.yaml
docker/app/: Dockerfile  docker-entrypoint.sh  requirements.txt
myapp/executable/: common.py  main.py  models.py  routes.py
myapp/tests/: conftest.py  test_endpoints.py
