[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$|\.ipynb$'
exclude = '''

(
    /(
        \.eggs
      | \.git
      | \.hg
      | \.mypy_cache
      | \.tox
      | \.venv
      | _build
      | buck-out
      | build
      | dist
    )/
)
'''

[tool.pyright]

[tool.isort]
profile = "black"

[tool.coverage.run]
omit = ['myapp/tests/*', 'myapp/**/__init__.py']

[tool.coverage.report]
omit = ['myapp/tests/*', 'myapp/**/__init__.py']

[tool.coverage.html]
skip_covered = false
skip_empty = true
